# macro-recorder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: app.py  controllers.py  models.py
src/services/: player.py  recorder.py
src/views/: file_menu.py  macro_display.py  player_options.py  scrolled_listbox.py
tests/: test_models.py
