[project]
name = "macro-recorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.12",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]
